--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,11 +2,9 @@ name: CI Test
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
   pull_request:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
   test:
@@ -24,9 +22,8 @@ jobs:
     - name: Install dependencies
       run: npm install
 
+    - name: List files for debug
+      run: ls -R   # ini untuk memastikan __tests__ ada di runner
+
     - name: Run tests
       run: npm test -- --verbose
-    
-    - name: List files
-      run: ls -R
-
